# muggy

./: .gitignore  .gitmessage  .gitmodules  README.md  premake5.lua
firstGame/: aCMakeLists.txt  premake5.lua
firstGame/premake/: generate_for_linux.sh
firstGame/src/: app.cpp  character.cpp  character.h
muggy/: CMakeLists.txt  aCMakeLists.txt  muggy.cpp  muggy.h
muggy/code/common/: common.h  id.h  myMacros.h  myTypes.h
muggy/code/components/: componentsCommon.h  entity.cpp  entity.h  script.cpp  script.h  transform.cpp  transform.h
muggy/code/core/: application.cpp  application.h  engine.cpp  entryPoint.cpp
muggy/code/event/: applicationEvent.h  event.h  eventType.h  keyEvent.h  mouseEvent.h  windowEvent.h
muggy/code/graphics/: graphicsPlatformInterface.h  renderer.cpp  renderer.h
muggy/code/graphics/direct3d12/: d3d12Common.h  d3d12Core.cpp  d3d12Core.h  d3d12Interface.cpp  d3d12Interface.h
muggy/code/graphics/opengl/: openglCommon.h  openglCore.cpp  openglCore.h  openglInterface.cpp  openglInterface.h
muggy/code/graphics/vulkan/: vulkanCommandBuffer.cpp  vulkanCommandBuffer.h  vulkanCommon.h  vulkanCore.cpp  vulkanCore.h  vulkanInterface.cpp  vulkanInterface.h  vulkanRenderPass.cpp  vulkanRenderPass.h  vulkanResources.cpp  vulkanResources.h  vulkanSurface.cpp  vulkanSurface.h  vulkanValidation.h
muggy/code/math/: mat4.cpp  mat4.h  mat4Template.cpp  mat4Template.h  math.cpp  math.h  mathTypes.h  maths_funcs.cpp  maths_funcs.h  vec2d.cpp  vec2d.h  vec2dTemplate.cpp  vec2dTemplate.h  vec3d.cpp  vec3d.h  vec3dTemplate.cpp  vec3dTemplate.h  vec4d.cpp  vec4d.h  vec4dTemplate.cpp  vec4dTemplate.h
muggy/code/platform/: includeWindowCpp.h  platform.cpp  platform.h  platformGLFW.cpp  platformTypes.h  window.cpp  window.h
muggy/code/utilities/: freelist.h  utilities.h  vector.h
muggy/engineAPI/: componentScript.h  componentTransform.h  engineAPI.cpp  engineAPI.h  engineCommon.h  entityAPI.cpp  entityAPI.h  gameEntity.h
muggyEditor/: aCMakeLists.txt  main.cpp
muggyExample/: CMakeLists.txt  aCMakeLists.txt  main.cpp
muggyExample/tests/: test.h  testEntities.cpp  testEntities.h  testFreelist.cpp  testFreelist.h  testRenderer.cpp  testRenderer.h  testWindow.cpp  testWindow.h
premake/: cmake_build_thirdparty_windows.bat  cmake_glfw_on_linux.sh  cmake_glfw_on_windows.bat  cmake_vulkan_build_on_linux.sh  cmake_vulkan_build_on_windows.bat  generate_for_linux.sh  generate_for_vs2022.bat  glfw.lua  startup_script.lua
